--- a/view/frontend/newPostView.html
+++ b/view/frontend/newPostView.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <a class="new_uturn" href="admin.php">Retour</a>
+    <a class="new_uturn" href="index.php?action=adminArea">Retour à l'espace administrateur</a>
     <h1>Nouveau Chapitre</h1>
       <form action="index.php?action=addPost" method="post">
         <div>
